# FLAM

./: .gitignore  CAMERA_DEBUG.md  CAMERA_NOT_WORKING_FIX.md  CONNECT_ANDROID_TO_WEB.md  DEBUGGING_CAMERA.md  END_TO_END_TEST_RESULTS.md  FEATURES_IMPLEMENTED.md  FIX_CONNECTION_REFUSED.md  FRAME_NOT_RECEIVED_FIX.md  GITHUB_SETUP.md  OPENCV_DIAGNOSTICS.md  QUICK_FIX.md  QUICK_FIX_CHECKLIST.md  README.md  RUN_AND_DEBUG.md  SETUP_GUIDE.md  START_SERVER.md  TEST_CONNECTION.md  TEST_REAL_FEED.md  TEST_RESULTS.md  WEB_VIEWER_NOT_SHOWING_FEED.md  build.gradle  check_logcat.ps1  settings.gradle  test_app.ps1
app/: build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  opencv_processing.cpp
app/src/main/java/com/flam/edgedetection/: EdgeDetectionRenderer.java  FrameProcessor.java  FrameSender.java  MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/mipmap/: .gitkeep
app/src/main/res/values/: strings.xml  themes.xml
screenshots/: .gitkeep
web/: index.html  package-lock.json  package.json  server.js  styles.css  test-connection.html  test.html
web/src/: index.ts  viewer.ts
